--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Te puia</title>
 </head>
 <body>
-    <h3 class="nav bar">
+    <nav>
         <a href="index.html">Home</a> <a href="history.html">History</a> 
         <a href="class.html">Class</a>
-    </h3>
+    </nav>
     <h1 id="index-top">
         Welocme to the Te Puia school website
     </h1>
