--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>
                     stuff
                 </p>
-                <img src="./Te Puia Resources/Images/carving classes.jpg"
+                <img src="./Te Puia Resources/Images/wood.jpg"
                 alt="carving class">
             </div>
             <div class="collem_two">
