--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <a href="index.html">Home</a> <a href="history.html">History</a> 
         <a href="class.html">Class</a>
     </nav>
-    <h1 id="index-top">
-        Welocme to the Te Puia school website
-    </h1>
     <main>
+        <h1 id="index-top">
+            Welocme to the Te Puia school website
+        </h1>
         <section class="two-column">
-            <div class="box">
+            <div class="about">
                 <h3>
                     About
                 </h3>
@@ -29,40 +29,43 @@
                 alt="Te Puia pa">
             </div>
         </section>
-        <section class="two-column">
+        <section class="two-column" id="index-history">
             <img src="./Te Puia Resources/Images/Frountpage_history.jpg" 
             alt="Hot rocks">
-            <div class="box">
+            <div class="history">
                 <h3>
                     History
                 </h3>
                 <p>
                     stuff
                 </p>
-                <a href="history.html">For more info cilk here</a>
+                <a href="history.html">For more info click here</a>
             </div>
         </section>
-        <div class="class-column">
-            <div class="collem_two">
-                <h3>
-                    Caving classes
-                </h3>
-                <p>
-                    stuff
-                </p>
-                <img src="./Te Puia Resources/Images/wood.jpg"
-                alt="carving class">
+        <div class="class">
+            <div class="class-column">
+                <div class="collem_two">
+                    <h3>
+                            Caving classes
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                    <img src="./Te Puia Resources/Images/wood.jpg"
+                    alt="carving class">
+                </div>
+                <div class="collem_two">
+                    <h3>
+                        Weving classes
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                    <img src="./Te Puia Resources/Images/weaving classes.jpg" 
+                    alt="weaving class">
+                </div>
             </div>
-            <div class="collem_two">
-                <h3>
-                    Weving classes
-                </h3>
-                <p>
-                    stuff
-                </p>
-                <img src="./Te Puia Resources/Images/weaving classes.jpg" 
-                alt="weaving class">
-            </div>
+            <a href="class.html"><br>For more info click here</a>
         </div>
     </main>
     <div class="copyright">
@@ -70,3 +73,4 @@
     </div>
 </body>
 </html>
+
