--- a/history.html
+++ b/history.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css.css" rel="stylesheet" type="text/css">
-    <title>History</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css.css" rel="stylesheet" type="text/css">
+        <title>History</title>
+    </head>
+    <body>
+        <nav>
+            <a href="index.html">Home</a> <a href="history.html">History</a> 
+            <a href="class.html">Class</a>
+        </nav>
+        <h1 id="history-top">
+            The History of Te Puia 
+        </h1>
+        <section class="two-column" id="index-history">
+            <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
+            alt="Hot rocks">
+            <div class="history">
+                <h3>
+                    Early History
+                </h3>
+                <p>
+                    stuff
+                </p>
+            </div>
+        </section>
+        <section id="history-text">
+            <div>
+                <h3>
+                    Main History
+                </h3>
+                <p>
+                    stuff
+                </p>
+            </div>
+            <div>
+                <p>
+                    stuff
+                </p>
+            </div>
+        </section>
+    </body>
 </html>
