--- a/class.html
+++ b/class.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css.css" rel="stylesheet" type="text/css">
-    <title>Class</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css.css" rel="stylesheet" type="text/css">
+        <title>Class</title>
+    </head>
+    <body>
+        <nav>
+            <a href="index.html">Home</a> <a href="history.html">History</a> 
+            <a href="class.html">Class</a>
+        </nav>
+        <div id="history-top">
+            <h1>
+                Classes
+            </h1>
+            <h3>
+                Carving and Weving
+            </h3>
+        </div>
+        <div>
+        <section class="two-column" id="index-about">
+            <div class="about">
+                <h3>
+                    Wood Carving
+                </h3>
+                <p>
+                    stuff
+                </p>
+            </div>
+            <div class="img">
+                <img src="./Te Puia Resources/Images/About.jpg" 
+                alt="Te Puia pa">
+            </div>
+        </section>
+    </body>
 </html>
