--- a/class.html
+++ b/class.html
@@ -34,5 +34,47 @@
                 alt="Te Puia pa">
             </div>
         </section>
+        <section id="w-class-text">
+            <div>
+                <h3>
+                    Main Text
+                </h3>
+                <p>
+                    stuff
+                </p>
+            </div>
+            <div>
+                <p>
+                    stuff
+                </p>
+            </div>
+        </section>
+        <section class="two-column" id="index-history">
+            <img src="./Te Puia Resources/Images/main-weving.jpg" 
+            alt="Hot rocks">
+            <div class="history">
+                <h3>
+                    Weaving carving
+                </h3>
+                <p>
+                    stuff
+                </p>
+            </div>
+        </section>
+        <section id="we-class-text">
+            <div>
+                <h3>
+                    Main Text
+                </h3>
+                <p>
+                    stuff
+                </p>
+            </div>
+            <div>
+                <p>
+                    stuff
+                </p>
+            </div>
+        </section>
     </body>
 </html>
