--- a/history.html
+++ b/history.html
@@ -26,7 +26,7 @@
                 </p>
             </div>
         </section>
-        <section id="history-text" class="backgruond-img">
+        <section id="history-text">
             <div>
                 <h3>
                     Main History
