--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" type="x-icon"
+        href="/Te Puia Resources/Images/icon2.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css.css" rel="stylesheet" type="text/css">
         <title>Te puia</title>
     </head>
     <body>
         <nav>
-            <a href="index.html">Home</a> <a href="history.html">History</a> 
-            <a href="class.html">Class</a>
+            <a href="index.html" class="nav">Home</a> 
+            <a href="history.html" class="nav">History</a> 
+            <a href="class.html" class="nav">Class</a> 
         </nav>
         <main>
             <h1 id="index-top">
