--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
         <main>
             <h1 id="index-top">
-                Welocme to the Te Puia school website
+                Welocme to the Te Puia School Website
             </h1>
             <section class="two-column" id="index-about">
                 <div class="about">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="collem_two">
                         <h3>
-                            Weving classes
+                            Weaving classes
                         </h3>
                         <p>
                             stuff
