Add img borders

--- a/class.html
+++ b/class.html
@@ -53,8 +53,10 @@
             </div>
         </section>
         <section class="two-column" id="index-history">
-            <img src="./Te Puia Resources/Images/main-weving.jpg" 
-            alt="Hot rocks">
+            <div class="img">
+                <img src="./Te Puia Resources/Images/main-weving.jpg" 
+                alt="Hot rocks">
+            </div>
             <div class="history">
                 <h3>
                     Weaving carving
