--- a/history.html
+++ b/history.html
@@ -18,8 +18,10 @@
             The History of Te Puia 
         </h1>
         <section class="two-column" id="index-history">
-            <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
-            alt="Hot rocks">
+            <div class="img">
+                <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
+                alt="Hot rocks">
+            </div>
             <div class="history">
                 <h3>
                     Early History
