--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                 </div>
             </section>
             <section class="two-column" id="index-history">
-                <img src="./Te Puia Resources/Images/Frountpage_history.jpg" 
-                alt="Hot rocks">
+                <div class="img">    
+                    <img src="./Te Puia Resources/Images/Frountpage_history.jpg" 
+                    alt="Hot rocks">
+                </div>
                 <div class="history">
                     <h3>
                         History
