more img borders

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                         <p>
                             stuff
                         </p>
-                        <img src="./Te Puia Resources/Images/wood.jpg"
-                        alt="carving class">
+                        <div class="img">
+                            <img src="./Te Puia Resources/Images/wood.jpg"
+                            alt="carving class">
+                        </div>
                     </div>
                     <div class="collem_two">
                         <h3>
@@ -66,8 +68,10 @@
                         <p>
                             stuff
                         </p>
-                        <img src="./Te Puia Resources/Images/weaving classes.jpg" 
-                        alt="weaving class">
+                        <div class="img">
+                            <img src="./Te Puia Resources/Images/weaving classes.jpg" 
+                            alt="weaving class">
+                        </div>
                     </div>
                 </div>
                 <a href="class.html"><br>For more info click here</a>
