--- a/class.html
+++ b/class.html
@@ -14,7 +14,7 @@
             <a href="history.html" class="nav">History</a> 
             <a href="class.html" class="nav">Class</a>
         </nav>
-        <div id="history-top">
+        <div id="class-top">
             <h1>
                 Classes
             </h1>
