class pange update

--- a/class.html
+++ b/class.html
@@ -9,10 +9,10 @@
         <title>Class</title>
     </head>
     <body>
-        <nav>
-            <a href="index.html" class="nav">Home</a> 
-            <a href="history.html" class="nav">History</a> 
-            <a href="class.html" class="nav">Class</a>
+        <nav id="class">
+            <a href="index.html" class="nav-class">Home</a> 
+            <a href="history.html" class="nav-class">History</a> 
+            <a href="class.html" class="nav-class">Class</a>
         </nav>
         <div id="class-top">
             <h1>
@@ -23,7 +23,7 @@
             </h3>
         </div>
         <div>
-        <section class="two-column" id="index-about">
+        <section class="two-column" id="carving">
             <div class="about">
                 <h3>
                     Wood Carving
@@ -33,11 +33,11 @@
                 </p>
             </div>
             <div class="img">
-                <img src="./Te Puia Resources/Images/About.jpg" 
+                <img src="./Te Puia Resources/Images/carving.jpg" 
                 alt="Te Puia pa">
             </div>
         </section>
-        <section id="w-class-text">
+        <section id="class-text-wood">
             <div>
                 <h3>
                     Main Text
@@ -52,7 +52,7 @@
                 </p>
             </div>
         </section>
-        <section class="two-column" id="index-history">
+        <section class="class-ti">
             <div class="img">
                 <img src="./Te Puia Resources/Images/main-weving.jpg" 
                 alt="Hot rocks">
@@ -66,7 +66,7 @@
                 </p>
             </div>
         </section>
-        <section id="we-class-text">
+        <section id="class-text-weaving">
             <div>
                 <h3>
                     Main Text
