--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
                 <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
                 alt="Hot rocks">
             </div>
-            <div class="history">
+            <div class="text-right">
                 <h3>
                     Early History
                 </h3>
