--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 Welocme to the Te Puia School Website
             </h1>
             <section class="two-column" id="index-about">
-                <div class="about">
+                <div class="text-left">
                     <h3>
                         About
                     </h3>
@@ -37,7 +37,7 @@
                     <img src="./Te Puia Resources/Images/Frountpage_history.jpg" 
                     alt="Hot rocks">
                 </div>
-                <div class="history">
+                <div class="text-right">
                     <h3>
                         History
                     </h3>
