--- a/class.html
+++ b/class.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <nav id="class">
-            <a href="index.html" class="nav-class">Home</a> 
-            <a href="history.html" class="nav-class">History</a> 
-            <a href="class.html" class="nav-class">Class</a>
+            <a href="index.html" class="nav">Home</a> 
+            <a href="history.html" class="nav">History</a> 
+            <a href="class.html" class="nav">Class</a>
         </nav>
         <div id="class-top">
             <h1>
@@ -52,7 +52,7 @@
                 </p>
             </div>
         </section>
-        <section class="class-ti">
+        <section class="two-column">
             <div class="img">
                 <img src="./Te Puia Resources/Images/main-weving.jpg" 
                 alt="Hot rocks">
