--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
         <title>History</title>
     </head>
     <body>
-        <nav>
+        <nav id="history">
             <a href="index.html" class="nav">Home</a> 
             <a href="history.html" class="nav">History</a> 
             <a href="class.html" class="nav">Class</a>
