--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Te puia</title>
     </head>
     <body>
-        <nav>
+        <nav id="index">
             <a href="index.html" class="nav">Home</a> 
             <a href="history.html" class="nav">History</a> 
             <a href="class.html" class="nav">Class</a> 
@@ -47,7 +47,7 @@
                     <a href="history.html">For more info click here</a>
                 </div>
             </section>
-            <div class="class">
+            <div id="index-class">
                 <div class="class-column">
                     <div class="collem_two">
                         <h3>
