--- a/class.html
+++ b/class.html
@@ -9,77 +9,80 @@
         <title>Class</title>
     </head>
     <body>
+        <!--Nav Bar-->
         <nav id="class">
             <a href="index.html" class="nav">Home</a> 
             <a href="history.html" class="nav">History</a> 
             <a href="class.html" class="nav">Class</a>
         </nav>
-        <div id="class-top">
-            <h1>
-                Classes
-            </h1>
-            <h3>
-                Carving and Weving
-            </h3>
-        </div>
-        <div>
-        <section class="two-column" id="carving">
-            <div class="about">
+        <main>
+            <!--Header-->
+            <div id="class-top">
+                <h1>
+                    Classes
+                </h1>
                 <h3>
-                    Wood Carving
+                    Carving and Weving
                 </h3>
-                <p>
-                    stuff
-                </p>
             </div>
-            <div class="img">
-                <img src="./Te Puia Resources/Images/carving.jpg" 
-                alt="Te Puia pa">
-            </div>
-        </section>
-        <section id="class-text-wood">
-            <div>
-                <h3>
-                    Main Text
-                </h3>
-                <p>
-                    stuff
-                </p>
-            </div>
-            <div>
-                <p>
-                    stuff
-                </p>
-            </div>
-        </section>
-        <section class="two-column">
-            <div class="img">
-                <img src="./Te Puia Resources/Images/main-weving.jpg" 
-                alt="Hot rocks">
-            </div>
-            <div class="history">
-                <h3>
-                    Weaving carving
-                </h3>
-                <p>
-                    stuff
-                </p>
-            </div>
-        </section>
-        <section id="class-text-weaving">
-            <div>
-                <h3>
-                    Main Text
-                </h3>
-                <p>
-                    stuff
-                </p>
-            </div>
-            <div>
-                <p>
-                    stuff
-                </p>
-            </div>
-        </section>
+            <section class="two-column" id="carving">
+                <div class="about">
+                    <h3>
+                        Wood Carving
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+                <div class="img">
+                    <img src="./Te Puia Resources/Images/carving.jpg" 
+                    alt="Te Puia pa">
+                </div>
+            </section>
+            <section id="class-text-wood">
+                <div>
+                    <h3>
+                        Main Text
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+            </section>
+            <section class="two-column">
+                <div class="img">
+                    <img src="./Te Puia Resources/Images/main-weving.jpg" 
+                    alt="Hot rocks">
+                </div>
+                <div class="history">
+                    <h3>
+                        Weaving carving
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+            </section>
+            <section id="class-text-weaving">
+                <div>
+                    <h3>
+                        Main Text
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
