--- a/history.html
+++ b/history.html
@@ -9,42 +9,46 @@
         <title>History</title>
     </head>
     <body>
+        <!--Nav Bar-->
         <nav id="history">
             <a href="index.html" class="nav">Home</a> 
             <a href="history.html" class="nav">History</a> 
             <a href="class.html" class="nav">Class</a>
         </nav>
-        <h1 id="history-top">
-            The History of Te Puia 
-        </h1>
-        <section class="two-column" id="index-history">
-            <div class="img">
-                <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
-                alt="Hot rocks">
-            </div>
-            <div class="text-right">
-                <h3>
-                    Early History
-                </h3>
-                <p>
-                    stuff
-                </p>
-            </div>
-        </section>
-        <section id="history-text">
-            <div>
-                <h3>
-                    Main History
-                </h3>
-                <p>
-                    stuff
-                </p>
-            </div>
-            <div>
-                <p>
-                    stuff
-                </p>
-            </div>
-        </section>
+        <main>
+            <!--Header-->
+            <h1 id="history-top">
+                The History of Te Puia 
+            </h1>
+            <section class="two-column" id="index-history">
+                <div class="img">
+                    <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
+                    alt="Hot rocks">
+                </div>
+                <div class="text-right">
+                    <h3>
+                        Early History
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+            </section>
+            <section id="history-text">
+                <div>
+                    <h3>
+                        Main History
+                    </h3>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        stuff
+                    </p>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
