--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
         <title>Te puia</title>
     </head>
     <body>
+        <!--Nav Bar-->
         <nav id="index">
             <a href="index.html" class="nav">Home</a> 
             <a href="history.html" class="nav">History</a> 
             <a href="class.html" class="nav">Class</a> 
         </nav>
         <main>
+            <!--Header-->
             <h1 id="index-top">
                 Welocme to the Te Puia School Website
             </h1>
