Recometit school shit index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
+New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give you first-letters navigation
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="x-icon"
-        href="/Te Puia Resources/Images/icon2.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css.css" rel="stylesheet" type="text/css">
         <title>Te puia</title>
@@ -26,17 +25,26 @@
                         About
                     </h3>
                     <p>
-                        stuff
+                        We are located in Nz Rotorua There are over 500 pools 
+                        and 65 geyser vents here, each with their own name, all 
+                        found in the 70 hectare Te Whakarewarewa geothermal 
+                        valley in Rotorua.<br>
+                        This is where we base our Traditional and national
+                        weaving carving school.<br>
+                        The local Iwi are the main contributors, we have 
+                        conservation efforts for endangered species such as our 
+                        national bird the Kiwi. We sell our carving and weaving 
+                        and we also do commissions.
                     </p>
                 </div>
                 <div class="img">
-                    <img src="./Te Puia Resources/Images/About.jpg" 
+                    <img src="./Te%20Puia%20Resources/Images/About.jpg" 
                     alt="Te Puia pa">
                 </div>
             </section>
             <section class="two-column" id="index-history">
-                <div class="img">    
-                    <img src="./Te Puia Resources/Images/Frountpage_history.jpg" 
+                <div class="img"> 
+                    <img src="./Te%20Puia%20Resources/Images/Frountpage_history.jpg" 
                     alt="Hot rocks">
                 </div>
                 <div class="text-right">
@@ -44,7 +52,17 @@
                         History
                     </h3>
                     <p>
-                        stuff
+                        We have be open sents 1963 but the history of are land 
+                        is much older<br>
+                        Our traditional Maori explanation of Te Whakarewarewa 
+                        Geothermal Valley states that this place was one of the 
+                        area’s ‘Te Pupu’ and ‘Te Hoata’, the Goddesses of Fire, 
+                        emerged from the earth’s core while trying to find their 
+                        brother Ngātoro-i-rangi, who was stranded on Mount 
+                        Tongariro. As they rose to the surface looking for their 
+                        brother, they left part of the fire they carried, 
+                        creating geysers, hot springs and mud pools, creating 
+                        the geothermal activity that remains today.
                     </p>
                     <a href="history.html">For more info click here</a>
                 </div>
@@ -53,13 +71,17 @@
                 <div class="class-column">
                     <div class="collem_two">
                         <h3>
-                                Caving classes
+                            Caving classes
                         </h3>
                         <p>
-                            stuff
+                            Today fulltime carving students study for three 
+                            years at the national carving school, under the 
+                            guidance of those, such as Clive Fugill and James 
+                            Rickard, master carvers at Te Puia who were once 
+                            institute carving students themselves.
                         </p>
                         <div class="img">
-                            <img src="./Te Puia Resources/Images/wood.jpg"
+                            <img src="./Te%20Puia%20Resources/Images/wood.jpg"
                             alt="carving class">
                         </div>
                     </div>
@@ -68,10 +90,16 @@
                             Weaving classes
                         </h3>
                         <p>
-                            stuff
+                            At the National Weaving school, students are 
+                            taught the skills and traditions of a craft 
+                            hundreds of years old. “I believe weaving can only 
+                            be learnt the old way - by sitting, by listening, 
+                            by touching and by doing,” says head of the 
+                            weaving school, Edna Pahewa.
                         </p>
                         <div class="img">
-                            <img src="./Te Puia Resources/Images/weaving classes.jpg" 
+                            <img src=
+                            "./Te%20Puia%20Resources/Images/weaving-classes.jpg"
                             alt="weaving class">
                         </div>
                     </div>
@@ -79,9 +107,6 @@
                 <a href="class.html"><br>For more info click here</a>
             </div>
         </main>
-        <div class="copyright">
-            
-        </div>
     </body>
 </html>
 
