recommit history.html

--- a/history.html
+++ b/history.html
@@ -1,9 +1,8 @@
+New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give you first-letters navigation
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="x-icon"
-        href="/Te Puia Resources/Images/icon2.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css.css" rel="stylesheet" type="text/css">
         <title>History</title>
@@ -22,30 +21,61 @@
             </h1>
             <section class="two-column" id="index-history">
                 <div class="img">
-                    <img src="./Te Puia Resources/Images/Erlyhistory.jpg" 
+                    <img src="./Te%20Puia%20Resources/Images/Erlyhistory.jpg" 
                     alt="Hot rocks">
                 </div>
                 <div class="text-right">
                     <h3>
-                        Early History
+                        Weapons Before Europe
                     </h3>
                     <p>
-                        stuff
+                        Before Europeans and European weapons arrived in 
+                        Aotearoa, Māori warfare mainly involved hand-to-hand 
+                        combat. Warriors used many different hand weapons, 
+                        including taiaha (fighting staffs), pouwhenua (pointed 
+                        staffs), tewhatewha (axe-like staffs), tao (short 
+                        spears), huata (long spears) and patu (clubs). The long 
+                        weapons were carried, and the small clubs were often 
+                        tucked into a belt. Special weapons were sometimes given 
+                        names and passed down through generations
                     </p>
                 </div>
             </section>
             <section id="history-text">
                 <div>
                     <h3>
-                        Main History
+                        Geysers
                     </h3>
                     <p>
-                        stuff
+                        Our traditional Maori explanation of Te Whakarewarewa 
+                        Geothermal Valley states that this place was one of the 
+                        area’s ‘Te Pupu’ and ‘Te Hoata’, the Goddesses of Fire, 
+                        emerged from the earth’s core while trying to find their
+                        brother Ngātoro-i-rangi, who was stranded on Mount 
+                        Tongariro. As they rose to the surface looking for their
+                        brother, they left part of the fire they carried, 
+                        creating geysers, hot springs and mud pools, creating 
+                        the geothermal activity that remains today.
                     </p>
                 </div>
                 <div>
                     <p>
-                        stuff
+                        Our main geyser is called “Pohutu” which means “Big 
+                        splash” and erupts up to heights of 30 meters.<br> 
+                        To the left of Pohutu (when viewing from the bridge) is 
+                        the “Prince of Wales Feathers” Geyser – named after 
+                        Prince Edward Albert visited here in the 1900’s. It was 
+                        traditionally named the “Tohu” or sign as it usually 
+                        plays 10 mins before and then simultaneously with Pohutu
+                        and reaches heights of up to seven metres (almost 23 
+                        feet).<br>
+                        The “Kererū” Geyser erupts every few days from the 
+                        blackened crater closest to Puarenga Stream. The 
+                        fan-shaped jet can reach heights of up to 15 metres 
+                        (just over 49 feet). It is named after the New Zealand 
+                        Pigeon.<br>
+                        According to Maori culture, 
+                        geysers are viewed as gifts from the gods
                     </p>
                 </div>
             </section>
