comints class.html

--- a/class.html
+++ b/class.html
@@ -20,13 +20,14 @@
                     Classes
                 </h1>
                 <h3>
-                    Carving and Weving
+                    Carving and Weaving
                 </h3>
             </div>
+            <!--Carving-->
             <section class="two-column" id="carving">
                 <div class="about">
                     <h3>
-                        Wood Carving
+                        Carving
                     </h3>
                     <p>
                         Today fulltime carving students study for three years at 
@@ -44,7 +45,7 @@
             <section id="class-text-wood">
                 <div>
                     <h3>
-                        Main Text
+                        What We Do
                     </h3>
                     <p>
                         Here at Te Puia we offer you the chance to take away 
@@ -62,6 +63,7 @@
                     </p>
                 </div>
             </section>
+            <!--Weaving-->
             <section class="two-column">
                 <div class="img">
                     <img src="./Te%20Puia%20Resources/Images/main-weving.jpg" 
