comments history.html

--- a/history.html
+++ b/history.html
@@ -18,11 +18,13 @@
             <h1 id="history-top">
                 The History of Te Puia 
             </h1>
+            <!--Starting Text-->
             <section class="two-column" id="index-history">
                 <div class="img">
                     <img src="./Te%20Puia%20Resources/Images/Erlyhistory.jpg" 
                     alt="Hot rocks">
                 </div>
+                <!--Main Text-->
                 <div class="text-right">
                     <h3>
                         Weapons Before Europe
