comments index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give you first-letters navigation
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -19,6 +18,7 @@ New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give y
             <h1 id="index-top">
                 Welocme to the Te Puia School Website
             </h1>
+            <!--About Section-->
             <section class="two-column" id="index-about">
                 <div class="text-left">
                     <h3>
@@ -42,6 +42,7 @@ New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give y
                     alt="Te Puia pa">
                 </div>
             </section>
+            <!--History Section-->
             <section class="two-column" id="index-history">
                 <div class="img"> 
                     <img src="./Te%20Puia%20Resources/Images/Frountpage_history.jpg" 
@@ -67,6 +68,7 @@ New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give y
                     <a href="history.html">For more info click here</a>
                 </div>
             </section>
+            <!--Classes-->
             <div id="index-class">
                 <div class="class-column">
                     <div class="collem_two">
